public/less/ssb-site-builder/ssb-components/ssb-form-builder.less
/********** Form Builder **********/
.form-builder-component {
    z-index: 2 !important;
    position: relative;
    span.help-block{
        color: #e74c3c !important;
    }
    span.required{
        position: absolute;
        color: #E6674A;
        display: inline;
    }
    .form-title {
        padding-left: 10px;
        position: relative;
    }
    .form-subtitle {
        margin: 0 10px;
        position: relative;
    }
    input, textarea{
        height: auto;
        border-radius: 4px !important;
        padding: 5px 4px;
        font-size: 14px;
        border: 1px solid #eeeeee;
    }
    .thank-you {
        padding: 0;
        margin-bottom: -70px;
    }
    .label-padding{padding-left:10px; }
    h3 {
        padding: 0 0 0 10px;
        font-weight: 600;
        text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.4);
        margin-top: 10px;
    }
    .has-success {
        .form-control {
            border-color: #2ecc71;
        }
        .glyphicon {
            color: #2ecc71;
        }
    }
    .has-error {
        .form-control {
            border-color: #e74c3c !important;
        }
        .glyphicon {
            color: #e74c3c !important;
        }
        .help-block {
            color: #e74c3c !important;
        }
    }
    .has-feedback .form-control-feedback {
        position: absolute;
        top: 8px;
        right: 8px;
    }
    textarea {
        resize: none;
    }
    .form-checkbox-field{
        width: 1%;
        float: left;
        margin-bottom: 5px;
        margin-top: 2px;
        input{
            margin: 0;
            padding: 0;
            min-height: 0;
            width: 16px;
            height: 16px;
            position: relative;
        }

        .optin-checkbox {
            font-height: 18px;
            vertical-align: middle;
        }
    }
    .form-checkbox-label{
        width: 99%;
        float: left;
        padding-left: 15px;
    }
}
.form-builder-layout{
    input, textarea{
        min-height: 34px;
        height: auto;
        border-radius: 4px !important;
        padding: 5px 4px;
        font-size: 14px;
        border: 1px solid #eeeeee;
    }
    .form-group label {
        margin-top: 8px;
        font-weight: normal;
        color: black;
    }
    .panel-active{
        box-shadow: inset 0px 0px 0px 8px rgba(71, 184, 217, 0.75);
    }
    .add-layout-btn{
        display:none;
        position: absolute;
        top: 0;
        left: 0;
        right: 0;
        bottom: 0;
        margin: auto;
        width: 170px;
        height: 35px;
    }
    margin: 10px;
    .form-layout-1{
         span.required{
            margin-top: 5px;
        }
        position: relative;
        width: 50%;
        margin: auto;
        label{
            display:block;
        }
        button{
            width:auto;
            float:right;
        }

        &:hover {
            cursor: pointer;
            .add-layout-btn{
                display: block;
            }
        }


    }
    .form-layout-2{
        span.required{
            margin-top: 5px;
        }
        position: relative;
        width: 50%;
        margin: auto;
        button{
            float:right;
            margin-right:15px;
            width:auto;
        }
         &:hover {
            cursor: pointer;
            .add-layout-btn{
                display: block;
            }
        }
    }
    .form-layout-3{
        span.required{
            right: 20px;
            &.req-opt-in{
                right: inherit !important;
                margin-left: -10px;
            }
        }
        position: relative;
        button{
            margin-right:15px;
            width:auto;
            float:right;
        }
         &:hover {
            cursor: pointer;
            .add-layout-btn{
                display: block;
            }
        }
    }
    .form-layout-4{
        span.required{
            right: 20px;
            &.req-opt-in{
                right: inherit !important;
                margin-left: -10px;
            }
        }

        position: relative;
        width: 50%;
        margin: auto;
        button{
            width:auto;
            float:right;
        }
         &:hover {
            cursor: pointer;
            .add-layout-btn{
                display: block;
            }
        }
    }
    .form-layout-custom{
        span.required{
            right: 20px;
            &.req-opt-in{
                right: inherit !important;
                margin-left: -10px;
            }
        }
        position: relative;
        margin: auto;
        button{
            float:right;
            width:auto;
        }
        &:hover {
            cursor: pointer;
            .add-layout-btn{
                display: block;
            }
        }


    }
}
.form-builder.panel.panel-default{
    margin-left: -15px;
    margin-right: -15px;
    .information-header{
        border-bottom: 1px solid #ddd;
        margin-bottom: 20px;

    }
}
.req-opt-in-container {
    margin: 0 0 0 15px;
    display: inline-block;
    .req-opt-in {
       left: 0;
   }
}
@media(max-width:767px) {
    .form-builder-layout{
    	.form-layout-1,  .form-layout-2,  .form-layout-3,  .form-layout-4, .form-layout-custom{
    		width: 100%;
    	}
    }
}
.btn-form{
    min-height: 20px;
    width: auto;
    padding: 6px 12px !important;

    .editable-title{
        display:none !important;
    }
}
.editable-btn-form{
    opacity: 0.65;
    display: table !important;
}
.form-builder-modal-body {
    background: white;
    padding: 0 15px;

    .information-header {
        background: #e8e8e8;
        padding: 15px;
        margin: 0 0 15px;
    }
}
@media(min-width:768px) {
    .form-builder-layout{
        div.message_right{
            float: right;
        }
    }
}

